# Matrix_Design

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Matrix_Design.cpp  Matrix_Design.h  README.md  Slice.h  common.h  makefile
Matrix_Design/: CMakeLists.txt  Matrix.h  Matrix_Design.cpp  Matrix_Design.h  Matrix_base.h  Matrix_ref.h  Matrix_slice.h  common.h  makefile
Matrix_Design/Test/: Matrix_Design_Test.cpp
Test/: Matrix_Design_Test.cpp
apps/: CMakeLists.txt  Matrix_Design_App.cpp
include/matrix_design/: common.h  matrix.h  matrix_base.h  matrix_ref.h  matrix_slice.h  slice.h
tests/: CMakeLists.txt  Matrix_Design_Test.cpp
